# DesignPatternsPython

./: DP_python.md  command_2_pattern.py  pyproject.toml  readme.md
Behavioral/: Chain_of_respon_2.py  Chain_of_respon_pattern.py  Strategy_pattern.py  command_pattern.py  mediator_pattern.py  memento_pattern.py  observer2.py  observer_pattern.py  state_pattern.py  visitor_pattern.py
Creational/: Factory_Method.py  FileAuditManager_ex.py  Singelton_1.py  Singleton_2.py  Singleton_meta.py  builder_pattern.py  builder_user_ex.py  dataviewer_ex.py  payment_factory_methode.py  sequence_generator_ex.py  sequence_generator_lazy.py  singleton_threads_safe.py  spaceship_factory_ex.py  spaceship_factory_ex_2.py  spaceship_factory_implementation.py  spaceship_factory_pattern.py
ex/: ex1.py  ex2.py  ex3.py  ex4.py  les.py  lotto_pytorch.py  text_transform.py
other/: cal.py  decorators.py  iterator.py  logger_demo.py  logger_test.py
structural/: Flyweight_pattern.py  adaptor2_ex.py  adaptor_pattern.py  composite_pattern.py  composite_pattern_2.py  decorator_pattern.py  proxy_pattern.py  python_decorator.py
