[project]
name = "designpatternspython"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "money>=1.3.0",
    "square>=0.0.3",
    "sumy>=0.11.0",
    "torch[all]>=2.9.1",
    "transformers>=4.57.3",
]

[tool.black]
line-length = 88
target-version = ["py314"]
exclude = '''
/(
    \.venv
  | venv
  | migrations
)/
'''


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["designpatternspython"]

